deployment/demo-devops-python/2_service.yml
apiVersion: v1
kind: Service
metadata:
  name: service-demo-devops-python
  namespace: default
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: 8000
      name: service-demo-devops-python
  selector:
    app: deploy-demo-devops-python
